# fairscape_server

./: .env  .gitignore  404.html  Dockerfile  Dockerfile.local  Makefile  build.sh  compose.local.yaml  compose.yaml  index.html  mkdocs.yml  preflight.sh  pyproject.toml  pytest.ini  requirements.txt  search.html  sitemap.xml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: deploy-docs.yml  docker-build.yml
deploy/: docker.env  docker_compose.env  local.env  local_export.env
deploy/setup/: requirements.txt  setup.env  setup_fairscape.py
docs/: index.md
docs/server-api/: dataset.md  evidence-graph.md  identifier-resolution.md  publish.md  rocrate.md  schema.md  search.md  software-computation.md  workflow-upload-fetch.md
mds/src/: .env
mds/src/fairscape_mds/: deps.py  main.py  worker.py
search/: search_index.json
server-api/dataset/: index.html
server-api/evidence-graph/: index.html
server-api/identifier-resolution/: index.html
server-api/publish/: index.html
server-api/rocrate/: index.html
server-api/schema/: index.html
server-api/search/: index.html
server-api/software-computation/: index.html
server-api/workflow-upload-fetch/: index.html
src/fairscape_mds/: config.py  worker.py
src/fairscape_mds/models/: __init__.py  computation.py  dataset.py  document.py  download.py  (+6 more)
tests/: APITests.ipynb  api_tests.py  benchmark_rocrate.py  conftest.py  test_api.py  test_cm4ai.ipynb  test_image_rocrates.py  test_publish.ipynb  test_rocrate.py
tests/model-tests/: dev.ipynb  test_dataset.py
tests/rocrate/: upload.ipynb
(+120 files in other folders)
